Updated to fix styling on small displays.

--- a/app/assets/stylesheets/site.sass
+++ b/app/assets/stylesheets/site.sass
@@ -184,6 +184,9 @@ a, a:visited
 		padding-left: 4em
 		margin-top: 20%
 
+		@include respond-to-smaller(medium-screens)
+			padding-left: 0
+
 		ul
 			list-style: none
 			padding-left: 0
